--- a/app/src/main/res/layout/activity_share_info.xml
+++ b/app/src/main/res/layout/activity_share_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.castelcode.cruisecompanion.trip_info_share_activity.ShareTripInfo"
+    tools:context="com.castelcode.cruisecompanion.share_activity.ShareCruiseItem"
     android:weightSum="3">
 
     <TextView
