--- a/app/src/main/res/layout/activity_trip_agenda.xml
+++ b/app/src/main/res/layout/activity_trip_agenda.xml
@@ -72,6 +72,19 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/share_all_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="end"
+                android:text="@string/share_all"
+                android:textColor="@android:color/black"
+                android:layout_toLeftOf="@+id/expand_all_button"
+                android:layout_toStartOf="@+id/expand_all_button"/>
+
+            <Button
                 android:id="@+id/expand_all_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
