--- a/app/src/main/res/layout/activity_trip_agenda.xml
+++ b/app/src/main/res/layout/activity_trip_agenda.xml
@@ -66,23 +66,23 @@
             android:layout_weight="1.75"
             android:focusable="false"
             android:focusableInTouchMode="false"/>
+
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/share_all_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_gravity="end"
                 android:text="@string/share_all"
-                android:textColor="@android:color/black"
-                android:layout_toLeftOf="@+id/expand_all_button"
-                android:layout_toStartOf="@+id/expand_all_button"/>
+                android:textColor="@android:color/black" />
 
             <Button
                 android:id="@+id/expand_all_button"
@@ -95,7 +95,6 @@
                 android:text="@string/expand_all_label"
                 android:textColor="@android:color/black" />
         </RelativeLayout>
-
     </LinearLayout>
 </LinearLayout>
 
