--- a/app/src/main/res/layout/activity_trip_checklists.xml
+++ b/app/src/main/res/layout/activity_trip_checklists.xml
@@ -1,26 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@android:color/black"
     android:id="@+id/trip_checklists">
 
     <ListView
         android:id="@+id/checklist_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent"
+        android:layout_marginBottom="60dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_checklist_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
         android:src="@drawable/ic_add_black_24dp"
         app:layout_anchor="@id/checklist_list_view"
-        app:layout_anchorGravity="bottom|right|end" />
-
-</android.support.design.widget.CoordinatorLayout>
+        app:layout_anchorGravity="bottom|right|end"
+        tools:ignore="RelativeOverlap" />
+    <Button
+        android:id="@+id/share_all_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/add_checklist_button"
+        android:text="@string/share_all" />
+</RelativeLayout>
